# apollo-green-todo

./: .gitignore  README.md
backend/: .gitignore  Dockerfile  README.md  apollo-todo.postman_collection.json  docker-compose.yml  openapi.yaml  pyproject.toml  requirements.txt
backend/docs/API_Doc/: apollo-todo.postman_collection.json
backend/docs/Overview/: user_stories.md
backend/src/apps/base/models/: auditable.py  time_stamped.py  trackable.py
backend/src/apps/categories/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/src/apps/categories/migrations/: 0001_initial.py
backend/src/apps/notifications/: urls.py
backend/src/apps/projects/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/src/apps/projects/migrations/: 0001_initial.py  0002_alter_project_name.py  0003_alter_project_status.py  0004_alter_project_category.py
backend/src/apps/tasks/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/src/apps/tasks/migrations/: 0001_initial.py
backend/src/apps/users/: admin.py  authentications.py  models.py  serializers.py  urls.py  views.py
backend/src/apps/users/migrations/: 0001_initial.py  0002_remove_user_date_joined_remove_user_first_name_and_more.py
backend/src/config/: settings.py  urls.py
docs/Flowchart/: ERD.sql  TODO.erd
frontend/: env.example  eslint.config.js  package-lock.json  package.json  tsconfig.app.tsbuildinfo
frontend/src/: App.tsx  index.css
frontend/src/api/: auth.ts  categories.ts  client.ts  projects.ts  tasks.ts
src/config/: settings.py
(+27 files in other folders)
